syntax = "proto3";
package cert.certid.v1;

import "gogoproto/gogo.proto";
import "google/protobuf/timestamp.proto";
import "cosmos/base/v1beta1/coin.proto";

option go_package = "github.com/chaincertify/certd/x/certid/types";

// CertID defines the profile structure
message CertID {
  string address = 1;
  string handle = 2;
  string name = 3;
  string bio = 4;
  string avatar_cid = 5 [ (gogoproto.customname) = "AvatarCID" ];
  string metadata_uri = 6 [ (gogoproto.customname) = "MetadataURI" ];
  string attestation_uid = 7 [ (gogoproto.customname) = "AttestationUID" ];
  string public_key = 8;
  uint32 entity_type = 9; 
  uint64 trust_score = 10;
  map<string, string> social_links = 11;
  repeated string credentials = 12;
  map<string, Badge> badges = 13;
  google.protobuf.Timestamp created_at = 14 [ (gogoproto.stdtime) = true, (gogoproto.nullable) = false ];
  google.protobuf.Timestamp updated_at = 15 [ (gogoproto.stdtime) = true, (gogoproto.nullable) = false ];
  bool verified = 16;
  bool is_active = 17;
  uint32 verification_level = 18;
}

// Badge defines a soulbound token
message Badge {
  string id = 1 [ (gogoproto.customname) = "ID" ];
  string name = 2;
  string description = 3;
  google.protobuf.Timestamp awarded_at = 4 [ (gogoproto.stdtime) = true, (gogoproto.nullable) = false ];
  string awarded_by = 5;
  bool is_revoked = 6;
  google.protobuf.Timestamp revoked_at = 7 [ (gogoproto.stdtime) = true ];
}

// Params defines the module parameters
message Params {
  uint32 max_username_length = 1;
  uint32 max_display_name_length = 2;
  uint32 max_bio_length = 3;
  uint32 max_credentials = 4;
  cosmos.base.v1beta1.Coin registration_fee = 5 [ (gogoproto.nullable) = false ];
}
