syntax = "proto3";
package cert.hardware.v1;

option go_package = "github.com/chaincertify/certd/x/hardware/types";

// Device represents a hardware device with TEE capabilities
// Per Whitepaper v3.0 Section 3.1: Hardware-Anchored Identity
message Device {
  string device_id        = 1;
  string serial_number    = 2;
  string manufacturer     = 3;
  string model            = 4;
  string tee_type         = 5; // ARM_TRUSTZONE, APPLE_SECURE_ENCLAVE, etc.
  bytes  public_key       = 6;
  string owner_address    = 7;
  uint64 trust_score      = 8;
  double uptime           = 9;
  double data_quality     = 10;
  uint64 attestation_count = 11;
  int64  last_attest_at   = 12; // Unix timestamp
  int64  registered_at    = 13; // Unix timestamp
  bool   is_active        = 14;
  bool   is_suspended     = 15;
  string suspension_reason = 16;
}

// TEEAttestation represents a cryptographic proof from a Trusted Execution Environment
message TEEAttestation {
  string device_id         = 1;
  bytes  attestation_data  = 2;
  bytes  manufacturer_sig  = 3;
  bytes  nonce             = 4;
  int64  timestamp         = 5; // Unix timestamp
  string attestation_type  = 6; // initial, periodic, challenge, boot
  bool   verified          = 7;
  int64  verified_at       = 8; // Unix timestamp
}

// HumanityScore represents aggregated anti-Sybil metrics
// Per Whitepaper v3.0 Section 2: "The Sybil Problem"
message HumanityScore {
  string address              = 1;
  uint64 score                = 2;
  uint64 device_count         = 3;
  double average_device_trust = 4;
  double geo_dispersion       = 5;
  double usage_pattern_score  = 6;
  int64  last_updated         = 7; // Unix timestamp
}

// MsgRegisterDevice registers a new hardware device
message MsgRegisterDevice {
  string creator              = 1;
  string manufacturer         = 2;
  string model                = 3;
  string tee_type             = 4;
  bytes  public_key           = 5;
  bytes  initial_attestation  = 6;
}

// MsgSubmitAttestation submits a TEE attestation for verification
message MsgSubmitAttestation {
  string submitter         = 1;
  string device_id         = 2;
  bytes  attestation_data  = 3;
  bytes  nonce             = 4;
  string attestation_type  = 5;
}

// MsgLinkDeviceToCertID links a verified device to a CertID profile
message MsgLinkDeviceToCertID {
  string owner          = 1;
  string device_id      = 2;
  string certid_address = 3;
}

// MsgSuspendDevice suspends a device for suspicious activity
message MsgSuspendDevice {
  string authority = 1;
  string device_id = 2;
  string reason    = 3;
}
